syntax = "proto3";

package result_service;

option go_package = "csc3004-group24-2023/proto";

import "types.proto";

service Result{
    rpc GetResult(GetResultRequest) returns (GetResultResponse) {}
}

message GetResultRequest{
    string poll_id = 1;
}

message GetResultResponse{
    common.ResultInfo result_info = 1;
}
